# worlds-reincarnate

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
java/: ReadClassic.java
resources/: samvid.csv
resources/generators/: RandomLevelWorker.js
resources/maps/: block_ids.csv  world_data.csv
src/: file.rs  functions.rs  generate.rs  jvm.rs  log.rs  main.rs  resources.rs  version.rs  world.rs
src/convert/: block.rs  blocks.rs  generate.rs  mod.rs  read.rs  worlddata.rs  write.rs
src/convert/ids/block_ids/: block_id_files.csv  classic.csv
src/file/: mod.rs
src/functions/: mod.rs
src/read/: mod.rs
src/ui/: buttons.rs  mod.rs  sub_menus.rs
src/write/: mod.rs
ui/: components.slint  convert.slint  load.slint  main.slint  states.slint
ui/themes/: theme.slint
