[package]
name = "worlds-reincarnate"
version = "0.1.0"
edition = "2021"

[dependencies]
#mc-libraries
mc-classic = "0.1.4"
mc-classic-js = "0.2.5"

#ui & design
slint = "1.8.0"
chrono = "0.4.44"
colored = "3.1.1"

#parsing
regex = "1.12.3"
csv = "1.4.0"

#file handling
rfd = "0.17.2"
flate2 = "1.1.9"

[build-dependencies]
slint-build = "1.8.0"