[package]
name = "worlds-reincarnate"
version = "0.1.0"
edition = "2021"

[dependencies]
#ui & design
slint = "1.8.0"
chrono = "0.4.44"
colored = "3.1.1"

#parsing
toml = "1.1.2+spec-1.1.0"
regex = "1.12.3"
csv = "1.4.0"
serde = "1.0.228"
serde_json = "1.0.149"
residua-mutf8 = "2.0.0"
enum-iterator = "2.3.0"
hex = "0.4.3"

#file handling
reqwest = {version = "0.13.2", features = ["blocking"]}
sha2 = "0.11.0"
rfd = "0.17.2"
directories = "6.0.0"
flate2 = "1.1.9"
rusqlite = {version = "0.39", features = ["bundled"]}
snap = "1.1.1"

#cross language scripting
v8 = "147.1.0"

[build-dependencies]
slint-build = "1.8.0"